# WeddingQuiz

./: .gitignore  AnimatedLetter.qml  CMakeLists.txt  ContentPage.qml  Jingle.qml  JingleAudioPresentations.qml  Letter.qml  MenuPage.qml  MultipleChoiceQuestion.qml  MultipleChoicesQuestionItem.qml  PageController.qml  QuestionsPage.qml  QuickQuestionItem.qml  README.md  Scenario  Score.qml  ScorePage.qml  TransitionPage.qml  VideoContent.qml  common.h  configurator.cpp  configurator.h  content_page.cpp  content_page.h  jingle_page.cpp  jingle_page.h  killallprocess.txt  main.cpp  main.qml  menu_page.cpp  menu_page.h  multiple_choices_question.cpp  multiple_choices_question.h  page_controller.cpp  page_controller.h  page_interface.cpp  page_interface.h  qml.qrc  question.cpp  question.h  (+20 more)
